chore: impl product controllers
