# docs/swagger.json
@@ -389,78 +389,6 @@
                 }
             }
         },
-        "/product/{id}": {
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product_Delete"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id of product",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Header must be set for valid response",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "$ref": "#/definitions/products.ProductDeleteResponse"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product_Update"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id of product",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Header must be set for valid response",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "$ref": "#/definitions/products.ProductUpdateResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/products": {
             "get": {
                 "consumes": [
@@ -549,6 +477,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Header must be set for valid response",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -556,6 +491,85 @@
                         "description": "success",
                         "schema": {
                             "$ref": "#/definitions/products.ProductGetOneResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product_Delete"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of product",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Header must be set for valid response",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/products.ProductDeleteResponse"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product_Update"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of product",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Header must be set for valid response",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Product_Update",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/products.ProductUpdateInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/products.ProductUpdateResponse"
                         }
                     }
                 }
@@ -726,13 +740,20 @@
             "required": [
                 "description",
                 "price",
+                "stock",
                 "title"
             ],
             "properties": {
                 "description": {
                     "type": "string"
                 },
+                "imageUrl": {
+                    "type": "string"
+                },
                 "price": {
+                    "type": "integer"
+                },
+                "stock": {
                     "type": "integer"
                 },
                 "title": {
@@ -747,10 +768,13 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "imageUrl": {
                     "type": "string"
                 },
                 "price": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
@@ -760,6 +784,9 @@
         "products.ProductDeleteResponse": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "message": {
                     "type": "string"
                 }
@@ -793,6 +820,32 @@
                 },
                 "price": {
                     "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "products.ProductUpdateInput": {
+            "type": "object",
+            "required": [
+                "description",
+                "price",
+                "stock",
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "imageUrl": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "stock": {
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
